# DreamTeam_TE3002B

./: .gitignore  README.md
M1-MovilRobots/Challenge/: main.py
M1-MovilRobots/ChallengeWeek2/: main.py
M3-DeepLearning/ChallengeWeek2/: main.py
M4-Control/Optimal_Control_MuJoCo/: rdlq_vs_pso_double_pendulum.py
M4-Control/so_arm_ws/: README.md  build.sh
M4-Control/so_arm_ws/src/SO101/: pick_place_scene.xml  sim_pick_place.py
M4-Control/so_arm_ws/src/so101_bringup/: CMakeLists.txt  package.xml
M4-Control/so_arm_ws/src/so101_bringup/launch/: gazebo.launch.py  physical.launch.py  sync.launch.py
M4-Control/so_arm_ws/src/so101_bringup/scripts/: feetech_bridge.py
M4-Control/so_arm_ws/src/so101_description/: CMakeLists.txt  package.xml
M4-Control/so_arm_ws/src/so101_description/config/: ros2_controllers.yaml
M4-Control/so_arm_ws/src/so101_description/launch/: display.launch.py
M4-Control/so_arm_ws/src/so101_description/rviz/: so101.rviz
M4-Control/so_arm_ws/src/so101_description/urdf/: so101.gazebo.xacro  so101.ros2_control.xacro  so101.urdf.xacro
M4-Control/so_arm_ws/src/so_arm100_description/: CMakeLists.txt
M4-Control/so_arm_ws/src/so_arm100_description/launch/: display.launch.py
M4-Control/so_arm_ws/src/so_arm100_description/rviz/: so_arm100.rviz
M4-Control/so_arm_ws/src/so_arm100_description/urdf/: so_arm100.gazebo.xacro  so_arm100.ros2_control.xacro  so_arm100.urdf.xacro
M4-Control/so_arm_ws/src/so_arm100_gazebo/: CMakeLists.txt
M4-Control/so_arm_ws/src/so_arm100_gazebo/config/: ros2_controllers.yaml
M4-Control/so_arm_ws/src/so_arm100_gazebo/launch/: sim.launch.py
M4-Control/so_arm_ws/src/so_arm100_gazebo/worlds/: pick_place.world
M4-Control/so_arm_ws/src/so_arm100_moveit_config/: CMakeLists.txt
M4-Control/so_arm_ws/src/so_arm100_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  so_arm100.srdf
M4-Control/so_arm_ws/src/so_arm100_moveit_config/launch/: move_group.launch.py
M4-Control/so_arm_ws/src/so_arm100_pick_place/: CMakeLists.txt  package.xml
M4-Control/so_arm_ws/src/so_arm100_pick_place/launch/: physical.launch.py  pick_launch.py  test_joints.launch.py  vision_pick.launch.py  vs_launch.launch.py
M4-Control/so_arm_ws/src/so_arm100_pick_place/rviz/: vision_pick.rviz
M4-Control/so_arm_ws/src/so_arm100_pick_place/so_arm100_pick_place/: feetech_bridge.py  joint_commander.py  lqr_visual_servoing.py  move_physical.py  pick_demo.py  pick_manual.py  pick_place_node.py  plot_vs_results.py  poses.json  realsense_node.py  teach_poses.py  vision_detector.py
so_arm_ws/install/: local_setup.sh  setup.sh
so_arm_ws/install/so_arm100_description/share/so_arm100_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
so_arm_ws/install/so_arm100_description/share/so_arm100_description/cmake/: so_arm100_descriptionConfig-version.cmake  so_arm100_descriptionConfig.cmake
so_arm_ws/install/so_arm100_description/share/so_arm100_description/environment/: ament_prefix_path.dsv  path.dsv
so_arm_ws/install/so_arm100_description/share/so_arm100_description/launch/: display.launch.py
so_arm_ws/install/so_arm100_description/share/so_arm100_description/rviz/: so_arm100.rviz
so_arm_ws/install/so_arm100_description/share/so_arm100_description/urdf/: so_arm100.gazebo.xacro  so_arm100.ros2_control.xacro  so_arm100.urdf.xacro
so_arm_ws/install/so_arm100_gazebo/share/so_arm100_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
so_arm_ws/install/so_arm100_gazebo/share/so_arm100_gazebo/cmake/: so_arm100_gazeboConfig-version.cmake  so_arm100_gazeboConfig.cmake
so_arm_ws/install/so_arm100_gazebo/share/so_arm100_gazebo/config/: ros2_controllers.yaml
so_arm_ws/install/so_arm100_gazebo/share/so_arm100_gazebo/environment/: ament_prefix_path.dsv  path.dsv
so_arm_ws/install/so_arm100_gazebo/share/so_arm100_gazebo/launch/: sim.launch.py
so_arm_ws/install/so_arm100_gazebo/share/so_arm100_gazebo/worlds/: pick_place.world
so_arm_ws/install/so_arm100_moveit_config/share/so_arm100_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
so_arm_ws/install/so_arm100_moveit_config/share/so_arm100_moveit_config/cmake/: so_arm100_moveit_configConfig-version.cmake  so_arm100_moveit_configConfig.cmake
so_arm_ws/install/so_arm100_moveit_config/share/so_arm100_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  so_arm100.srdf
so_arm_ws/install/so_arm100_moveit_config/share/so_arm100_moveit_config/environment/: ament_prefix_path.dsv  path.dsv
so_arm_ws/install/so_arm100_moveit_config/share/so_arm100_moveit_config/launch/: move_group.launch.py
so_arm_ws/install/so_arm100_pick_place/share/so_arm100_pick_place/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
so_arm_ws/install/so_arm100_pick_place/share/so_arm100_pick_place/cmake/: so_arm100_pick_placeConfig-version.cmake  so_arm100_pick_placeConfig.cmake
so_arm_ws/install/so_arm100_pick_place/share/so_arm100_pick_place/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
so_arm_ws/log/: latest_build
so_arm_ws/src/so_arm100_description/: package.xml
so_arm_ws/src/so_arm100_description/urdf/: so_arm100.ros2_control.xacro  so_arm100.urdf.xacro
so_arm_ws/src/so_arm100_gazebo/: package.xml
so_arm_ws/src/so_arm100_gazebo/config/: ros2_controllers.yaml
so_arm_ws/src/so_arm100_gazebo/launch/: sim.launch.py
so_arm_ws/src/so_arm100_moveit_config/config/: moveit_controllers.yaml  ompl_planning.yaml
so_arm_ws/src/so_arm100_pick_place/: CMakeLists.txt
so_arm_ws/src/so_arm100_pick_place/launch/: pick_place.launch.py
so_arm_ws/src/so_arm100_pick_place/so_arm100_pick_place/: vision_node.py
(+16 files in other folders)
