<?xml version="1.0"?>
<package format="3">
  <name>so_arm100_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo simulation for SO-ARM100 pick and place</description>
  <maintainer email="h.tovarm07@gmail.com">Hector Tovar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>so_arm100_description</exec_depend>
  <exec_depend>so_arm100_moveit_config</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
