<?xml version="1.0"?>
<package format="3">
  <name>so101_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for SO-ARM101: Gazebo simulation, physical robot, and Gazebo↔physical sync</description>
  <maintainer email="h.tovarm07@gmail.com">Hector Tovar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>so101_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
